# foe-be-gone

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HOME_ASSISTANT_INSTALL.md  Makefile  README.md  alembic.ini  awesome-features.md  build.yaml  classify_animals_efficientnet.py  claude-wrapper.sh  config.yaml  dev-init.sh  dev-mode.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  fix_device_integrity.py  groundingdino_crow_detection.py  pyproject.toml  repository.yaml  requirements-dev.txt  requirements.txt  run-test.sh  run.sh  test-addon-local.sh  test_groundingdino.py  test_m4_performance.py  test_megadetector.py  test_ollama_performance.py  test_species_provider.py  view_yolov11_detections.py  yolov11_advanced_testing.py  yolov11_animal_detection.py  yolov11_comprehensive_report.py  yolov11_extended_analysis.py
.claude/: settings.local.json
addon/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  build.sh  build.yaml  config.yaml  repository.yaml  run.sh
alembic/: env.py
app/: __init__.py  main.py
docs/: DEVELOPMENT-CONTAINER.md  DEVELOPMENT-DOCKER.md  DEVELOPMENT.md  UnifiProtectAPI.md  api-documentation.md  detection-architecture.md  external-apis.md  home-assistant-addon.md
foe-be-gone/: DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  run.sh
groundingdino_detections/: groundingdino_results.json  groundingdino_summary.json
megadetector_video_extraction/: video_extraction_summary.json
megadetector_video_extraction_classification/: classification_results.json  classification_summary.json
(+126 files in other folders)
